// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 CardMedia设置square属性 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm dnslaE sinoui-card__media sinoui-card__media--square"
=======
  className="CardMedia__CardMediaWrapper-bhn9ot-0 idUODF sinoui-card__media sinoui-card__media--square"
>>>>>>> origin/bottomNavigation
/>
`;

exports[`快照测试 CardMedia设置wide属性 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ffutXX sinoui-card__media sinoui-card__media--16-9"
=======
  className="CardMedia__CardMediaWrapper-bhn9ot-0 hUJXuy sinoui-card__media sinoui-card__media--16-9"
>>>>>>> origin/bottomNavigation
/>
`;
